--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p>~ Euripides</p>
         </div>
         <div class="quote2">
-            <ol>
+            <ol start="2">
                 <li>
                     Youth is such a wonderful thing. What a crime to waste it on children.
                 </li>
@@ -27,15 +27,15 @@
             <p>~ George Bernard Shaw</p>
         </div>
         <div class="quote3">
-            <ul>
+            <ol start="3">
                 <li>
                     Youth comes but once in a lifetime.
                 </li>
-            </ul>
+            </ol>
             <p>~Henry Wadsworth Longfellow</p>
         </div>
         <div class="quote4">
-            <ol>
+            <ol start="4">
                 <li>
                     Who so neglects learning in his youth loses the past and is dead to the future.
                 </li>
@@ -43,7 +43,7 @@
             <p>~ Euripedes</p>
         </div>
         <div class="quote5">
-            <ol>
+            <ol start="5">
                 <li>
                     Youth is about the only thing worth having, and that is about the only thing youth has.
                 </li>
